compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__functions__function_literals_get_properly_wrapped_1.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/functions.rs
assertion_line: 431
expression: "pub fn main() {\n  fn(n) { n + 1 }(10)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() {
  fn(n) { n + 1 }(10)
}


----- COMPILED JAVASCRIPT
export function main() {
  return 10 + 1;
}
