compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__functions__internal_function_gets_ignored_jsdoc.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/functions.rs
assertion_line: 578
expression: "\n/// Hello! This is the documentation of the `main`\n/// function, which is internal!\n///\n@internal\npub fn main() { 1 }\n"
snapshot_kind: text
---
----- SOURCE CODE

/// Hello! This is the documentation of the `main`
/// function, which is internal!
///
@internal
pub fn main() { 1 }


----- COMPILED JAVASCRIPT
/**
 * Hello! This is the documentation of the `main`
 * function, which is internal!
 * 
 * @ignore
 */
export function main() {
  return 1;
}
