compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__functions__labelled_argument_ordering.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/functions.rs
assertion_line: 464
expression: "\ntype A { A }\ntype B { B }\ntype C { C }\ntype D { D }\n\nfn wibble(a a: A, b b: B, c c: C, d d: D) {\n  Nil\n}\n\npub fn main() {\n  wibble(A, C, D, b: B)\n  wibble(A, C, D, b: B)\n  wibble(B, C, D, a: A)\n  wibble(B, C, a: A, d: D)\n  wibble(B, C, d: D, a: A)\n  wibble(B, D, a: A, c: C)\n  wibble(B, D, c: C, a: A)\n  wibble(C, D, b: B, a: A)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

type A { A }
type B { B }
type C { C }
type D { D }

fn wibble(a a: A, b b: B, c c: C, d d: D) {
  Nil
}

pub fn main() {
  wibble(A, C, D, b: B)
  wibble(A, C, D, b: B)
  wibble(B, C, D, a: A)
  wibble(B, C, a: A, d: D)
  wibble(B, C, d: D, a: A)
  wibble(B, D, a: A, c: C)
  wibble(B, D, c: C, a: A)
  wibble(C, D, b: B, a: A)
}


----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../gleam.mjs";

class A extends $CustomType {}

class B extends $CustomType {}

class C extends $CustomType {}

class D extends $CustomType {}

function wibble(a, b, c, d) {
  return undefined;
}

export function main() {
  wibble(new A(), new B(), new C(), new D());
  wibble(new A(), new B(), new C(), new D());
  wibble(new A(), new B(), new C(), new D());
  wibble(new A(), new B(), new C(), new D());
  wibble(new A(), new B(), new C(), new D());
  wibble(new A(), new B(), new C(), new D());
  wibble(new A(), new B(), new C(), new D());
  return wibble(new A(), new B(), new C(), new D());
}
