compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__functions__module_const_fn1.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/functions.rs
assertion_line: 398
expression: "\npub fn int_identity(i: Int) -> Int { i }\npub const int_identity_alias: fn(Int) -> Int = int_identity\npub const compound: #(fn(Int) -> Int, fn(Int) -> Int) =\n    #(int_identity, int_identity_alias)"
snapshot_kind: text
---
----- SOURCE CODE

pub fn int_identity(i: Int) -> Int { i }
pub const int_identity_alias: fn(Int) -> Int = int_identity
pub const compound: #(fn(Int) -> Int, fn(Int) -> Int) =
    #(int_identity, int_identity_alias)

----- TYPESCRIPT DEFINITIONS
export const int_identity_alias: (x0: number) => number;

export const compound: [(x0: number) => number, (x0: number) => number];

export function int_identity(i: number): number;
