compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__functions__multiple_discard.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/functions.rs
assertion_line: 263
expression: "pub fn main(_, _, _) {\n  1\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main(_, _, _) {
  1
}


----- COMPILED JAVASCRIPT
export function main(_, _1, _2) {
  return 1;
}
